<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Airballoon controller</string>
    <string name="action_settings">Settings</string>
    <string name="packet_id">Packet ID</string>
    <string name="packet_content">Packet Content</string>
    <string name="input_data">Input data:</string>
    <string name="connected_device">Connected device:</string>
    <string name="device_mac_placeholder">Device - AA:BB:CC:DD:EE</string>
    <string name="title_activity_select_device">Select Paired Device</string>
    <string name="title_activity_control_device">Control Device</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="ignore_future_errors">Ignore future errors</string>
    <string name="add">Add</string>
    <string name="control">Control</string>
    <string name="debug">Debug</string>

    <string name="title_activity_splash_screen">Airballoon Controller</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <!-- String arrays for spinner boxes -->
    <string-array name="module_types">
        <item>Servo</item>
        <item>Termometer</item>
    </string-array>
    <string-array name="port_number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>
